<resources>
    <string name="app_name">Rooster App</string>
    <string name="action_settings">Settings</string>
    <string name="saved">Opgeslagen</string>
    <string name="banner_ad_unit_id">ca-app-pub-6919792345220213/5762037086</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6919792345220213/7099169488</string>
    <string name="test_device_id">152D12D2F4913FBAA753ED1E3FA55BB3</string>
    <string name="title_activity_zermelo_help">Help</string>

    <string name="invalid_code">Ongeldige code of code al gebruikt</string>
    <string name="invalid_site">Ongeldige website</string>
    <string name="auth_success">App succesvol gelinkt</string>
    <string name="no_connection">Error: geen internet</string>
    <string name="validation_error">Er is iets misgegaan</string>
    <string name="title_activity_refresh">RefreshActivity</string>

    <string name="hour_cancelled_on">Er valt een uur uit op %s</string>
    <string name="check_app_for_info">Kijk in de app voor meer info</string>
    <string name="hours_cancelled_count">Er vallen %d lessen uit</string>
    <string name="schedule_json">Rooster JSON</string>
    <string name="copied">Gekopieërd</string>
    <string name="first_sync_title">LET OP!</string>
    <string name="first_sync_message">Aan meldingen van uitvallende uren zijn geen rechten verbonden. Controleer dus altijd op Zermelo of een uur inderdaad uitvalt. Dit is dus ook geen reden waarom je niet naar een les gegaan bent. Je school is niet verantwoordelijk voor deze app</string>

    <string name="zermelo_sync">Zermelo sychronisatie</string>
    <string name="zermelo_syncing">Rooster aan het synchroniseren...</string>
    <string name="zermelo_code">Vul hier de Zermelo website van je school en een Zermelo \'Koppel App\' code in om te synchroniseren met Zermelo (dit is NIET je leerlingnummer):</string>
    <string name="zermelo_site">Website - [school].zportal.nl</string>
    <string name="zermelo_connect_app_code">Code</string>
    <string name="zermelo_where">Waar vind ik deze code?</string>
    <string name="zermelo_force_sync">Forceer synchronisatie</string>
    <string name="settings">Instellingen</string>
    <string name="notify">Geef meldingen van lesuren</string>
    <string name="notify_day_schedule">Laat dagrooster zien in meldingen</string>
    <string name="notify_cancel">Geef meldingen van uitval</string>
    <string name="show_group">Laat clusters/klassen zien</string>
    <string name="teacher">Laat docenten zien</string>
    <string name="teacher_full">Laat volledige naam docenten zien wanneer beschikbaar</string>
    <string name="use_dark_mode">Gebruik donker thema</string>
    <string name="theme_color">Thema kleur</string>
    <string name="schedule">Rooster</string>
    <string name="first_day_of_week">Maandag</string>
    <string name="back">&lt;</string>
    <string name="forward">&gt;</string>
    <string name="divider">Divider</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="no_lessons">Geen lessen gevonden</string>
    <string name="no_upcoming_lesson">Geen aankomende les</string>
    <string name="user">Toon ander rooster</string>
    <string name="user_id">Leerlingnummer of lerarenafkorting</string>
    <string name="me">Mijn rooster</string>
</resources>
