<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/user"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/user"
        android:icon="@drawable/ic_person_white_48dp" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/settings"
        android:icon="@drawable/settings" />
    <item
        android:id="@+id/zermelo_sync"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/zermelo_force_sync"
        android:icon="@drawable/refresh" />
</menu>
