<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context="com.wilco375.roosternotification.activity.SettingsActivity">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:id="@+id/showNotificationCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/notify" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:id="@+id/showDayScheduleCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/notify_day_schedule" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:layout_marginTop="5dp"
        android:id="@+id/showCancelledNotificationCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/notify_cancel" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginTop="5dp"
        android:id="@+id/showGroupCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/show_group" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginTop="5dp"
        android:id="@+id/teacherCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/teacher" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginTop="5dp"
        android:id="@+id/teacherFullCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/teacher_full" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:layout_marginTop="5dp"
        android:id="@+id/useDarkModeCheckbox"
        android:theme="@style/CheckBoxStyle"
        android:textColor="@color/textColor"
        android:text="@string/use_dark_mode" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:text="@string/theme_color"
        android:textColor="@color/textColor"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/themeColorSpinner"
        android:spinnerMode="dropdown"/>
</LinearLayout>
